--- a/WebScrapper_Prototype/Views/User/UserOrders.cshtml
+++ b/WebScrapper_Prototype/Views/User/UserOrders.cshtml
@@ -12,10 +12,7 @@
 	</system.webServer>
 </configuration>
 <html lang="zxx">
-	<body>
-	@foreach(var product in Model.Products!)
-	{
-		<p>@product.ProductName</p>
-	}
+<body>
+	<h1>Coming Soon!</h1>
 </body>
-	</html>
+</html>
