--- a/WebScrapper_Prototype/wwwroot/css/style.css
+++ b/WebScrapper_Prototype/wwwroot/css/style.css
@@ -177,7 +177,7 @@ Version:1.0
 }
 /* End Preloader */
 
-.btn {
+/*.btn {
 	position: relative;
 	font-weight: 500;
 	font-size:14px;
@@ -196,7 +196,7 @@ Version:1.0
 .btn:hover{
 	color:#fff;
 	background:#F7941D;
-}
+}*/
 #scrollUp {
 	right: 10px;
 	z-index: 33;
