--- a/WebScrapper_Prototype/Views/Checkout/PlaceOrder.cshtml
+++ b/WebScrapper_Prototype/Views/Checkout/PlaceOrder.cshtml
@@ -16,21 +16,7 @@
 <html lang="zxx">
 <head>
 	<!-- Meta Tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
-	<meta property="og:title" content="WazaWare">
-	<meta property="og:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
-	<meta property="og:image" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
-	<meta property="og:url" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com">
-	<meta property="og:type" content="website">
-	<meta name="twitter:card" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
-	<meta name="twitter:title" content="WazaWare">
-	<meta name="twitter:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
-	<meta name="twitter:image" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
-	<!-- Logo -->
-	<link rel="shortcut icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.comhttps://wazaware.co.za/Media/Logo/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.comhttps://wazaware.co.za/Media/Logo/favicon.ico" type="image/x-icon">
+	<partial name="_MetaData" />
 	<!-- Title Tag  -->
 	<title>Checkout</title>
 	<!-- Web Font -->
@@ -185,61 +171,6 @@
 				<div id="cartmain" class="row section-divider">
 					<!-- Shop Product Grid -->
 					<div class="col-lg-7 col-md-4 col-12">
-						<!-- Latest Products: Header -->
-						<div class="col-12" style="padding: 0;">
-							<div class="shop-top curvedEdges">
-								<div class="content" style="width:100%;">
-									@if (Model.ShoppingCart!.Select(s => s.ShippingCost).First() != 0)
-									{
-										<div class="row">
-											<div class="col">
-												<script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
-												<lord-icon src="https://cdn.lordicon.com/uetqnvvg.json"
-														   trigger="loop-on-hover"
-														   delay="1000"
-														   colors="primary:#121331,secondary:#f7941d"
-														   style="width:100px;height:100px">
-												</lord-icon>
-											</div>
-											<div class="col" style="padding:25px">
-												<p class="text-sm-start text-md-start text-lg-center">
-													<span style="color:#ff6b6b; font-weight:500;">
-														GET FREE SHIPPING
-													</span>
-												</p>
-												<h3 class="text-sm-start text-md-start text-lg-center">
-													Spend @Model.ShoppingCart!.Select(s => s.TryGetFreeShippingFormatted).First() and We Cover Your Shipping Costs
-												</h3>
-											</div>
-										</div>
-									}
-									else
-									{
-										<div class="row">
-											<div class="col">
-												<script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
-												<lord-icon src="https://cdn.lordicon.com/uetqnvvg.json"
-														   trigger="loop-on-hover"
-														   delay="1000"
-														   colors="primary:#121331,secondary:#f7941d"
-														   style="width:100px;height:100px">
-												</lord-icon>
-											</div>
-											<div class="col">
-												<p class="text-sm-start text-md-start text-lg-center">
-													<span style="color:#ff6b6b; font-weight:500;">
-														FREE SHIPPING
-													</span>
-												</p>
-												<h3 class="text-sm-start text-md-start text-lg-center">
-													Your Shipping Costs are Covered Thats Means Its FREE!
-												</h3>
-											</div>
-										</div>
-									}
-								</div>
-							</div>
-						</div>
 						<!-- Cart Products: Grid -->
 						<div class="row">
 							@foreach (var product in Model.ShoppingCart!)
