--- a/WebScrapper_Prototype/Views/Shared/_HeaderInner.cshtml
+++ b/WebScrapper_Prototype/Views/Shared/_HeaderInner.cshtml
@@ -14,32 +14,32 @@
 											<a href="/Shop">Shop</a>
 										</li>
 										<li>
-											<a href="@Url.Action("ProductDb", "Home", new { category = "essential_hardware" })">
+											<a class="link-body-emphasis link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-10-hover" href="@Url.Action("Products", "Shop", new { category = "essential_hardware" })">
 												Essential Hardware<i class="ti-arrow-top-right"></i>
 											</a>
 										</li>
 										<li>
-											<a href="@Url.Action("ProductDb", "Home", new { category = "latest_gpus" })">
+											<a class="link-body-emphasis link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-10-hover" href="@Url.Action("Products", "Shop", new { category = "latest_gpus" })">
 												Latest GPUS<i class="ti-arrow-top-right"></i>
 											</a>
 										</li>
 										<li>
-											<a href="@Url.Action("ProductDb", "Home", new { category = "great_deals" })">
+											<a class="link-body-emphasis link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-10-hover" href="@Url.Action("Products", "Shop", new { category = "great_deals" })">
 												Great Deals<i class="ti-arrow-top-right"></i>
 												</a>
 										</li>
 										<li>
-											<a href="@Url.Action("ProductDb", "Home", new { category = "pc_chassis" })">
+											<a class="link-body-emphasis link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-10-hover" href="@Url.Action("Products", "Shop", new { category = "pc_chassis" })">
 												PC Chassis<i class="ti-arrow-top-right"></i>
 												</a>
 										</li>
 										<li>
-											<a href="@Url.Action("ProductDb", "Home", new { category = "data_storage" })">
+											<a href="@Url.Action("Products", "Shop", new { category = "data_storage" })">
 												Data Storage<i class="ti-arrow-top-right"></i>
 												</a>
 										</li>
 										<li>
-											<a href="@Url.Action("ProductDb", "Home", new { category = "performace_laptops" })">
+											<a class="link-body-emphasis link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-10-hover" href="@Url.Action("Products", "Shop", new { category = "performace_laptops" })">
 												Performance Laptops<i class="ti-arrow-top-right"></i>
 												</a>
 										</li>
