--- a/WebScrapper_Prototype/Views/Shop/Cart.cshtml
+++ b/WebScrapper_Prototype/Views/Shop/Cart.cshtml
@@ -17,22 +17,7 @@
 </configuration>
 <html lang="zxx">
 <head>
-	<!-- Meta Tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
-	<meta property="og:title" content="WazaWare">
-	<meta property="og:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
-	<meta property="og:image" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
-	<meta property="og:url" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com">
-	<meta property="og:type" content="website">
-	<meta name="twitter:card" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
-	<meta name="twitter:title" content="WazaWare">
-	<meta name="twitter:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
-	<meta name="twitter:image" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
-	<!-- Logo -->
-	<link rel="shortcut icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.comhttps://wazaware.co.za/Media/Logo/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.comhttps://wazaware.co.za/Media/Logo/favicon.ico" type="image/x-icon">
+	<partial name="_MetaData" />
 	<!-- Title Tag  -->
 	<title>Shopping Cart</title>
 	<!-- Web Font -->
@@ -73,6 +58,8 @@
 	<link rel="stylesheet" href="~/css/responsive.css">
 	<!-- Site CSS -->
 	<link rel="stylesheet" href="~/css/site.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
 	<style type="text/css">
 		.cardChanges {
 			display: flex;
@@ -128,7 +115,7 @@
 	<div class="header shop" style="background-color:#FFF5E1;">
 		<!-- Topbar // Desktop Only -->
 		<div class="desktop">
-			<partial name="_TopBar" />
+			<partial name="_TopBar" model="@Model.PartialView" />
 			<!-- Middle Inner -->
 			<partial name="_MiddleInner" model="@Model.PartialView" />
 			<!-- Header Inner Partial View-->
@@ -150,9 +137,9 @@
 				<div class="col-12">
 					<div class="bread-inner">
 						<ul class="bread-list">
-							<li><a href="/">Home<i class="ti-arrow-right"></i></a></li>
-							<li><a href="/Shop">Shop<i class="ti-arrow-right"></i></a></li>
-							<li class="active"><a href="/Shop/Cart">Cart</a></li>
+							<li><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-10-hover" href="/">Home<i class="ti-arrow-right"></i></a></li>
+							<li><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-10-hover" href="/Shop">Shop<i class="ti-arrow-right"></i></a></li>
+							<li class="active"><a class="link-dark link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-10-hover" href="/Shop/Cart">Cart</a></li>
 						</ul>
 					</div>
 				</div>
@@ -182,15 +169,15 @@
 								<div class="col-lg-6 col-md-9 col-12">
 									<div class="single-product contain-fit" style="margin:0">
 										<div class="product-img contain-fit">
-											<a href="#0" class="remove" title="Remove this item" onclick="loadDeleteCart('@product.ProductId')">
+											<a class="link-body-emphasis link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-10-hover" title="Remove this item" onclick="loadDeleteCart('@product.ProductId')">
 												<i class="fa fa-remove"></i><span> Remove</span>
 											</a>
-											<a href="/Shop/Product/@product.ProductId">
+											<a class="link-body-emphasis link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-10-hover" href="/Shop/Product/@product.ProductId">
 												<img src="@Url.Action("GetImage", "Backend", new { id = product.ProductId })" alt="@product.ProductName" class="contain-fit" />
 											</a>
 										</div>
 										<div class="product-content">
-											<h3><a href="/Shop/Product/@product.ProductId">@product.ProductName!.Substring(0,35)...</a></h3>
+											<h3><a class="link-body-emphasis link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-10-hover" href="/Shop/Product/@product.ProductId">@product.ProductName!.Substring(0,35)...</a></h3>
 											<div class="product-price">
 												<div class="row">
 													<div class="col-lg-6 col-md-6 col-sm-12">
@@ -209,7 +196,7 @@
 															</div>
 															<div class="col">
 																<span style="font-weight:800; margin:0;">
-																	<label style="margin:0; font-size:12px; font-weight:500;">You Save</label><br>
+																	<label style="margin:0; font-size:12px; font-weight:500; color:forestgreen;">You Save</label><br>
 																	@product.ProductBaseSaleDiffFormatted
 																</span>
 															</div>
@@ -225,9 +212,30 @@
 						<!-- // BREAK // -->
 						<br>
 					</div>
-					<!-- Side Cards -->
 					<div class="col-lg-5 col-md-6 col-12">
-						<div class="card text-bg-dark" style="margin:10px;">
+						<div class="card">
+							<h3 class="card-header">Checkout</h3>
+							<div class="card-body">
+								<h5 class="card-title">You Save: @Model.ShoppingCart!.Select(s => s.CartBaseSaleDiffFormatted).First() !</h5><br>
+								<p class="card-text" style="color:black">
+									Sub Total: <span class="text-decoration-line-through" style="color:red; text-decoration:line-through;">
+										@Model.ShoppingCart!.Select(s => s.CartBaseTotalFormatted).First()
+									</span>
+								</p>
+								<p class="card-text" style="color:black">Discounted:  <span style="color:forestgreen">@Model.ShoppingCart!.Select(s => s.CartBaseSaleDiffFormatted).First()</span></p>
+								<p class="card-text" style="color:black">Shipping: R450</p>
+								<p class="card-text" style="color:black">Grand Total:  <span style="color:black;font-weight:800;">@Model.ShoppingCart!.Select(s => s.CartSaleTotalFormatted).First()</span></p>
+								<div class="row">
+									<div class="col">
+										<a href="/Checkout" class="btn btn-primary">Proceed</a>
+									</div>
+									<div class="col">
+										<a href="/" class="btn btn-danger">Exit</a>
+									</div>
+								</div>								
+							</div>
+						</div>
+@*						<div class="card text-bg-dark" style="margin:10px;">
 							<div class="card-header text-center">
 								<p class="fs-2 h2">
 									Checkout Cart
@@ -245,40 +253,35 @@
 									<br>
 								}
 								<p class="fs-4 h4">
-									Your Total WAS:<br>
-									<span class="text-decoration-line-through" style="color:red; text-decoration:line-through;">
-										@Model.ShoppingCart!.Select(s => s.CartBaseTotalFormatted).First()
-									</span>
+
 								</p>
 								<br>
 								<p class="fs-4 h4">
 									You Save:<br>
 									<span style="color:forestgreen;">
-										@Model.ShoppingCart!.Select(s => s.CartBaseSaleDiffFormatted).First()
+										
 									</span>
 								</p>
 								<br>
 								<p class="fs-4 h4">
 									Your Total NOW:<br>
 									<span style="text-decoration-line:underline;font-weight:700;">
-										@Model.ShoppingCart!.Select(s => s.CartSaleTotalFormatted).First()
+										
 									</span>
 								</p>
 								<br>
 							</div>
-
 							<div class="card-footer text-center">
 								<div class="row">
 									<div class="col">
-										<a href="/Checkout" class="btn fs-4 h4" style="padding:5px;">Checkout</a>
+										<a href="/Checkout" class="btn btn-success">Checkout</a>
 									</div>
 									<div class="col">
-										<a href="/" class="btn btn-outline-info fs-4 h4" style="padding:5px;">Continue Shopping</a>
-
+										<a href="/" class="btn btn-secondary">Continue Shopping</a>
 									</div>
 								</div>
 							</div>
-						</div>
+						</div>*@
 					</div>
 				</div>
 			</div>
@@ -323,6 +326,7 @@
 		<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 	}
 	<!-- Jquery -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 	<script src="~/js/jquery.min.js"></script>
 	<script src="~/js/jquery-migrate-3.0.0.js"></script>
 	<script src="~/s/jquery-ui.min.js"></script>
