--- a/WebScrapper_Prototype/Views/User/Login.cshtml
+++ b/WebScrapper_Prototype/Views/User/Login.cshtml
@@ -6,23 +6,9 @@
 <html lang="zxx">
 <head>
 	<!-- Meta Tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
-	<meta property="og:title" content="WazaWare">
-	<meta property="og:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
-	<meta property="og:image" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
-	<meta property="og:url" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com">
-	<meta property="og:type" content="website">
-	<meta name="twitter:card" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
-	<meta name="twitter:title" content="WazaWare">
-	<meta name="twitter:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
-	<meta name="twitter:image" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
-	<!-- Logo -->
-	<link rel="shortcut icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.comhttps://wazaware.co.za/Media/Logo/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.comhttps://wazaware.co.za/Media/Logo/favicon.ico" type="image/x-icon">
+	<partial name="_MetaData" />
 	<!-- Title Tag  -->
-	<title>Account Details</title>
+	<title>Login</title>
 	<!-- Web Font -->
 	<link href="https://fonts.googleapis.com/css?family=Lato:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 	<!-- StyleSheet -->
@@ -59,6 +45,7 @@
 	<link rel="stylesheet" href="~/css/responsive.css">
 	<!-- Site CSS -->
 	<link rel="stylesheet" href="~/css/site.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 	<style type="text/css">
 		/* hide mobile div by default */
 		.mobile {
@@ -115,7 +102,7 @@
 	<div class="header shop" style="background-color:#FFF5E1;">
 		<!-- Topbar // Desktop Only -->
 		<div class="desktop">
-			<partial name="_TopBar" />
+			<partial name="_TopBar" model="@Model.PartialView" />
 			<!-- Middle Inner -->
 			<partial name="_MiddleInner" model="@Model.PartialView" />
 			<!-- Header Inner Partial View-->
@@ -137,7 +124,7 @@
 				<div class="col-9">
 					<br>
 					<p class="fs-4 h4">Stop wasting your time looking for discounts & deals. We got you covered!</p>
-					<p class="fs-2 h2">Please Login into your <span style="color:orange; font-weight:800;">Wa</span><span style="color:forestgreen; font-weight:800;">za</span><span style="color:orange; font-weight:800;">Ware</span> Account</p>
+					<p class="fs-2 h2">Please Login into your <span style="color:orange; font-weight:800;">WA</span><span style="color:forestgreen; font-weight:800;">ZA</span><span style="color:orange; font-weight:800;">WARE</span> Account</p>
 					@if (ViewBag.InvalidCredentials != null)
 					{
 						<p class="fs-6 h6" style="color:red">@ViewBag.InvalidCredentials</p>
@@ -160,21 +147,18 @@
 								<div class="form-group">
 									<label asp-for="Login!.Password" class="form-label">Password</label>
 									<input asp-for="Login!.Password" type="password" name="password" autocomplete="on" class="form-control" placeholder="Password" aria-label="Password" required>
-									<a href="#"><i class="ti-angle-right" style="white-space: nowrap;" data-toggle="tooltip" data-placement="right" title="Reset Password"> Forgot Password?</i></a>
+									<a href="#"><i class="ti-angle-right" style="white-space: nowrap;" data-toggle="tooltip" data-placement="right" title="Reset Password"> Forgot Password?</i></a>						
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col">
 								<input type="submit" value="Login" class="btn btn-primary" />
-							</div>
+								<br />
+								<a href="/user/register" class="">Not Registered?</a>
+							</div>		
 						</div>
 					</form>
-					<div class="row">
-						<div class="col" style="top:10px;">
-							<a href="@Url.Action("Register", "UserAccount")" type="button" class="btn-outline-info" style="padding:5px;">Not Registered?</a>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -215,6 +199,8 @@
 	<!-- Easing JS -->
 	<script src="~/js/easing.js"></script>
 	<!-- Active JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 	<script src="~/js/active.js"></script>
 	<script type="text/javascript">
 		function userLogout() {
